<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bottom_bar_colour"
        android:layout_width="418dp"
        android:layout_height="114dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/navigation_bg"
        android:scaleType="fitXY"
        android:tint="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/bottom_bar"
        app:tintMode="screen" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginStart="344dp"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:onClick="showPopUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plus_button" />

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="114dp"
        android:layout_height="90dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calendar_button"
        android:scaleType="fitCenter"
        android:tint="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:srcCompat="@drawable/calendar_button" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="115dp"
        android:layout_height="89dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_button"
        android:scaleType="fitCenter"
        android:tint="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_button2" />

</androidx.constraintlayout.widget.ConstraintLayout>